Implemented Email Verification

--- a/src/authentication/forgetPassword/forgetPassword.fxml
+++ b/src/authentication/forgetPassword/forgetPassword.fxml
@@ -28,7 +28,7 @@
                                 <Image url="@../../images/logo.png" />
                             </image>
                         </ImageView>
-                      <Text layoutX="8.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Retrieve Password Page">
+                      <Text layoutX="8.0" layoutY="18.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Forget Password Page">
                           <font>
                               <Font size="29.0" />
                           </font>
