--- a/src/mainApplication/viewEventManager/viewEventManager.fxml
+++ b/src/mainApplication/viewEventManager/viewEventManager.fxml
@@ -2,6 +2,8 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -62,11 +64,16 @@
                   <Font size="25.0" />
                </font>
             </Text>
-            <Button layoutX="16.0" layoutY="325.0" mnemonicParsing="false" onAction="#switchToMain" prefHeight="33.0" prefWidth="79.0" text="Back" />
-            <Text layoutX="14.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Search for Event with UUID" />
-            <Label layoutX="13.0" layoutY="113.0" text="UUID" />
-            <TextField fx:id="txtUUID" layoutX="67.0" layoutY="109.0" />
-            <Button layoutX="13.0" layoutY="158.0" mnemonicParsing="false" onAction="#search" text="Search" />
+            <Button layoutX="3.0" layoutY="353.0" mnemonicParsing="false" onAction="#switchToMain" prefHeight="33.0" prefWidth="79.0" text="Back" />
+            <Label layoutX="14.0" layoutY="52.0" text="UUID" />
+            <TextField fx:id="txtUUID" layoutX="65.0" layoutY="48.0" />
+            <Button layoutX="231.0" layoutY="48.0" mnemonicParsing="false" onAction="#search" text="Search" />
+            <TableView fx:id="tableView" layoutX="29.0" layoutY="100.0" prefHeight="200.0" prefWidth="149.0">
+              <columns>
+                <TableColumn fx:id="NameColumn" prefWidth="75.0" text="Name" />
+                <TableColumn fx:id="UUIDColumn" prefWidth="75.0" text="UUID" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
    </children>
