--- a/src/mainApplication/viewEventManager/viewEventManager.fxml
+++ b/src/mainApplication/viewEventManager/viewEventManager.fxml
@@ -9,6 +9,7 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
@@ -16,26 +17,26 @@
    <children>
       <AnchorPane fx:id="anchorInfo" layoutY="5.0" prefHeight="410.0" prefWidth="710.0" visible="false">
          <children>
-            <GridPane layoutX="14.0" layoutY="23.0" prefHeight="152.0" prefWidth="236.0">
+            <GridPane layoutX="96.0" layoutY="37.0" prefHeight="152.0" prefWidth="236.0">
               <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
               <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="51.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="51.0" minHeight="10.0" prefHeight="51.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                  <Label text="Name" />
+                  <Label text="Name" underline="true" />
                   <Label fx:id="lblName" text="Label" GridPane.columnIndex="1" />
-                  <Label text="Location" GridPane.rowIndex="1" />
+                  <Label text="Location" underline="true" GridPane.rowIndex="1" />
                   <Label fx:id="lblLocation" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label text="Date" GridPane.rowIndex="2" />
+                  <Label text="Date" underline="true" GridPane.rowIndex="2" />
                   <Label fx:id="lblDate" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <GridPane layoutX="14.0" layoutY="175.0" prefHeight="152.0" prefWidth="236.0">
+            <GridPane layoutX="96.0" layoutY="189.0" prefHeight="152.0" prefWidth="236.0">
                <columnConstraints>
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
                   <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -46,15 +47,32 @@
                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                </rowConstraints>
                <children>
-                  <Label text="Performer" />
+                  <Label text="Performer" underline="true" />
                   <Label fx:id="lblPerformer" text="Label" GridPane.columnIndex="1" />
-                  <Label text="Max Attendees" GridPane.rowIndex="1" />
+                  <Label text="Max Attendees" underline="true" GridPane.rowIndex="1" />
                   <Label fx:id="lblMax" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                  <Label text="UUID" GridPane.rowIndex="2" />
+                  <Label text="UUID" underline="true" GridPane.rowIndex="2" />
                   <Label fx:id="lblUUID" text="Label" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
-            <Button layoutX="22.0" layoutY="348.0" mnemonicParsing="false" onAction="#switchToSearch" text="Search for another event" />
+            <Button layoutX="22.0" layoutY="360.0" mnemonicParsing="false" onAction="#switchToSearch" text="Search for another event" />
+            <Text layoutX="118.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Event Details">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <Line endX="-100.0" endY="298.0" layoutX="455.0" layoutY="58.0" startX="-100.0" startY="-4.0" />
+            <Text layoutX="486.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Event Attendees">
+               <font>
+                  <Font size="18.0" />
+               </font>
+            </Text>
+            <TableView fx:id="userTableView" layoutX="432.0" layoutY="71.0" prefHeight="200.0" prefWidth="236.0">
+              <columns>
+                <TableColumn fx:id="userNameColumn" prefWidth="120.0" text="Name" />
+                  <TableColumn fx:id="userUUIDColumn" prefWidth="120.0" text="UUID" />
+              </columns>
+            </TableView>
          </children>
       </AnchorPane>
       <AnchorPane fx:id="anchorSearch" layoutX="10.0" layoutY="10.0" prefHeight="400.0" prefWidth="700.0">
