--- a/src/mainApplication/viewEventUser/ViewEventUser.fxml
+++ b/src/mainApplication/viewEventUser/ViewEventUser.fxml
@@ -1,11 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
-
+<?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
 <AnchorPane prefHeight="400.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="mainApplication.viewEventUser.ViewEventUserController">
    <children>
-      <Button layoutX="14.0" layoutY="328.0" mnemonicParsing="false" onAction="#switchToMainUser" text="Back to Main Menu" />
+      <Button layoutX="291.0" layoutY="310.0" mnemonicParsing="false" onAction="#switchToMainUser" text="Back to User Menu" />
+      <Text layoutX="273.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="All current Events">
+         <font>
+            <Font size="20.0" />
+         </font>
+      </Text>
+      <TableView fx:id="tableView" layoutX="47.0" layoutY="74.0" prefHeight="200.0" prefWidth="600.0">
+        <columns>
+            <TableColumn fx:id="UUIDColumn" prefWidth="120.0" text="UUID" />
+          <TableColumn fx:id="NameColumn" prefWidth="120.0" text="Name" />
+          <TableColumn fx:id="LocationColumn" prefWidth="120.0" text="Location" />
+            <TableColumn fx:id="DateColumn" prefWidth="120.0" text="Date" />
+            <TableColumn fx:id="PerformerColumn" prefWidth="120.0" text="Performer" />
+        </columns>
+      </TableView>
    </children>
 </AnchorPane>
