--- a/src/mainApplication/viewEventManager/viewEventManager.fxml
+++ b/src/mainApplication/viewEventManager/viewEventManager.fxml
@@ -62,15 +62,16 @@
                </font>
             </Text>
             <Line endX="-100.0" endY="298.0" layoutX="455.0" layoutY="58.0" startX="-100.0" startY="-4.0" />
-            <Text layoutX="486.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Event Attendees">
+            <Text layoutX="469.0" layoutY="21.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Event Attendees">
                <font>
                   <Font size="18.0" />
                </font>
             </Text>
-            <TableView fx:id="userTableView" layoutX="432.0" layoutY="71.0" prefHeight="200.0" prefWidth="236.0">
+            <TableView fx:id="userTableView" layoutX="383.0" layoutY="65.0" prefHeight="200.0" prefWidth="300.0">
               <columns>
-                <TableColumn fx:id="userNameColumn" prefWidth="120.0" text="Name" />
-                  <TableColumn fx:id="userUUIDColumn" prefWidth="120.0" text="UUID" />
+                <TableColumn fx:id="userNameColumn" prefWidth="100.0" text="Name" />
+                  <TableColumn fx:id="userUUIDColumn" prefWidth="100.0" text="UUID" />
+                  <TableColumn fx:id="userUserNameColumn" prefWidth="100.0" text="User Name" />
               </columns>
             </TableView>
          </children>
