added multithreading to send email function

--- a/src/authentication/forgetPassword/forgetPassword.fxml
+++ b/src/authentication/forgetPassword/forgetPassword.fxml
@@ -15,7 +15,7 @@
             <children>
                 <TextField fx:id="txtUserName" layoutX="102.0" layoutY="83.0" />
                 <Label layoutX="14.0" layoutY="87.0" text="Username" />
-            <Button layoutX="15.0" layoutY="133.0" mnemonicParsing="false" onAction="#retrievePassword" text="Retrieve" />
+            <Button layoutX="15.0" layoutY="133.0" mnemonicParsing="false" onAction="#retrievePassword" text="Reset Password" />
               <Button layoutX="100.0" layoutY="235.0" mnemonicParsing="false" onAction="#switchToLauncher" text="Back to main Menu" />
             </children>
         </AnchorPane>
